--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('resumo') }}">Resumo</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('visualizar_emails') }}">Emails</a>
+      </li>
 
 
     </ul>
