--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,13 @@
         <a class="nav-link" href="{{ url_for('apurar_empresas') }}">Apurar</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('conferir_empresas') }}">Conferir</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('enviar_emails_das_empresas') }}">Envio de Emails</a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link" href="{{ url_for('notas_fiscais') }}">Notas Fiscais</a>
       </li>
       <li class="nav-item">
@@ -23,6 +30,8 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('visualizar_emails') }}">Emails</a>
       </li>
+
+
 
 
     </ul>
