--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('enviar_emails_das_empresas') }}">Envio de Emails</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('resumo') }}">Resumo</a>
+      </li>
 
 <!--      <li class="nav-item">-->
 <!--        <a class="nav-link" href="{{ url_for('notas_fiscais') }}">Notas Fiscais</a>-->
